[tool.poetry]
name = "mount"
version = "0.1.0"
description = "Wrapper around sys/mount.h"
authors = ["Ivan Fedorov <inbox@titaniumhocker.ru>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/titaniumhocker/mount"
documentation = "https://mount.rtfd.io"
packages = [
    { include = "mount" },
]
include = [
    { path = "CHANGES.rst", format="sdist"},
    { path = "tests", format="sdist" },
    { path = "docs", format="sdist" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/titaniumhocker/mount/issues"

[tool.poetry.scripts]
pymnt = "mount.cli:main"

[tool.poetry.dependencies]
python = ">=3.10.1,<4.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
flake8 = "<5.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"
flake8-bandit = "<=3.0.0"
flake8-bugbear = "<=23.3.12"
flakeheaven = "^3.2.1"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
