[tool.poetry]
name = "mount"
version = "0.1.0"
description = "Wrapper around sys/mount.h"
authors = ["Ivan Fedorov <inbox@titaniumhocker.ru>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/titaniumhocker/mount"
packages = [
    { include = "mount" },
]
include = [
    { path = "CHANGES.rst", format="sdist" },
    { path = "README.rst", format="sdist" }
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/titaniumhocker/mount/issues"

[tool.poetry.scripts]
pymnt = "mount.cli:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
flake8 = "<5.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"
flake8-bandit = "<=3.0.0"
flake8-bugbear = "<=23.3.12"
flake8-docstrings = "<1.6.0"
flakeheaven = "^3.2.1"

[tool.black]
line_length = 88

[tool.isort]
profile = "black"
src_paths = ["flask_constance"]
line_length = 88

[tool.flakeheaven]
format = "colored"
max_line_length = 88
show_source = true

[tool.flakeheaven.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*", "-W503", "-E501"]
flake8-docstrings = ["+*", "-D400", "-D107", "-D204", "-D105", "-D100"]
flake8-isort = ["+*"]
flake8-black = ["+*"]
flake8-bugbear = ["+*"]
flake8-bandit = ["+*"]

[tool.mypy]
files="mount"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
